# martensite-digital-twin

./: README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: ARTICLE_DERIVED_DATA_GAP_PLAN.md  DEFENSIBILITY_GAP_REGISTER.md  OPEN_DATA_INGESTION_PLAN.md  (+1 more)
martensite_twin_v01/: README.md  pyproject.toml  requirements.txt
martensite_twin_v01/app/: streamlit_app.py
martensite_twin_v01/data/processed/: synthetic_niti_b19prime_orientations.csv  v02_report.json  v02_report.md  v02_synthetic_niti_dataset.csv
martensite_twin_v01/docs/: DATA_STRATEGY.md  ROADMAP.md
martensite_twin_v01/examples/: demo_steel_ks.py
martensite_twin_v01/martwin/: __init__.py
martensite_twin_v01/martwin/analysis/: variant_analysis.py
martensite_twin_v01/martwin/calibration/: gap_analysis.py
martensite_twin_v01/martwin/connectors/: damask.py
martensite_twin_v01/martwin/core/: lattice.py  rotations.py  symmetry.py
martensite_twin_v01/martwin/crystallography/: orientation_relationships.py  parent_reconstruction.py  variants.py
martensite_twin_v01/martwin/io/: ebsd_csv.py  manifest.py
martensite_twin_v01/martwin/kinetics/: niti_transform.py
martensite_twin_v01/martwin/materials/: niti.py  schema.py
martensite_twin_v01/martwin/mechanics/: strain.py
martensite_twin_v01/martwin/reporting/: report.py
martensite_twin_v01/martwin/simulation/: __init__.py
martensite_twin_v01/martwin/visualization/: maps.py  simple_plots.py
martensite_twin_v01/martwin/workflows/: digital_twin.py
martensite_twin_v01/tests/: test_core.py  test_workflow_v02.py
(+37 files in other folders)
