[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-martensite-twin"
version = "0.3.0"
description = "Python-first guided digital twin workflow for martensitic transformations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenMartensiteTwin Project"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "tabulate>=0.9"
]

[project.optional-dependencies]
app = [
  "streamlit>=1.34"
]
full = [
  "streamlit>=1.34",
  "scipy>=1.10",
  "orix>=0.14",
  "kikuchipy>=0.11",
  "pycalphad>=0.10"
]

[tool.setuptools]
packages = {find = {where = ["."]}}
