[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "martensite-twin"
version = "0.1.0"
description = "Python-first scaffold for a martensitic-transformation digital twin"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Martensite Twin Project"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
full = [
  "scipy>=1.10",
  "orix>=0.14",
  "kikuchipy>=0.11",
  "pycalphad>=0.10",
  "streamlit>=1.34"
]

[tool.setuptools]
packages = {find = {where = ["."]}}
